Allow global option settings for checkbox, unselectable, ...

--- a/demo/sample-select.html
+++ b/demo/sample-select.html
@@ -314,10 +314,7 @@
 		A double-click handler selects a <i>document</i> node (not folders).<br>
 		A keydown handler selects on [space].<br>
 		The <code>checkbox</code> icons are replaced by radio buttons by adding
-		the 'fancytree-radio' class to the container.<br>
-		Note: the initialization data contains multiple selected nodes. This is
-		considered bad input data and <b>not</b> fixed automatically (only on
-		the first click).
+		the 'fancytree-radio' class to the container.
 	</p>
 	<div id="tree1" class="fancytree-radio">
 	</div>
