tooltip option uses dynamic option pattern

--- a/demo/sample-select.html
+++ b/demo/sample-select.html
@@ -27,6 +27,8 @@
 		$("#tree1").fancytree({
 			checkbox: "radio",
 			selectMode: 1,
+			// tooltip: true,
+			// tooltip: function(event, data) { return data.node.title + "!"},
 			source: [
 				{title: "n1 (checkbox: false)", expanded: true, checkbox: false, children: [
 					{title: "n1.1"},
