--- a/demo/nav.html
+++ b/demo/nav.html
@@ -141,6 +141,7 @@ $(function(){
 		<ul>
 			<li><a target="content" href="welcome.html">Welcome</a>
 			<li><a target="content" href="sample-default.html">Default options</a>
+			<li><a target="content" href="sample-playground.html">Playground</a>
 			<li><a target="content" href="sample-configurator.html">Option configurator</a>
 			<li><a target="content" href="sample-multi-ext.html">Complex demo</a>
 			<li><a target="content" href="sample-source.html">Initialization</a>
